<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorMainBackground"
>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              android:text="@string/heightString"
              android:id="@+id/heightTextID"
              android:textColor="@color/colorPrimary"
    />
    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/heightTextID"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:hint="@string/heightHintText"
              android:gravity="center"
              android:id="@+id/heightEditID"
              android:inputType="numberDecimal"
              android:shadowColor="@color/colorPrimary"

    />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/heightEditID"
              android:text="@string/weightString"
              android:id="@+id/weightTextID"
              android:textColor="@color/colorPrimary"

    />
    <EditText android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/weightTextID"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:hint="@string/heightHintText"
              android:gravity="center"
              android:id="@+id/weightEditID"
              android:inputType="number"
              android:shadowColor="@color/colorPrimary"

    />
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weightEditID"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/buttonCalcString"
            android:id="@+id/buttonCalcID"
            android:textColorHint="@color/colorPrimary"
    />
    <TextView android:layout_width="0dp"
              android:layout_height="@dimen/BMITextSize"
              app:layout_constraintTop_toBottomOf="@+id/buttonCalcID"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              android:gravity="center"
              android:hint="@string/hintForBMINumber"
              android:id="@+id/BMINumberID"
              android:textColor="@color/colorPrimary"

    />
    <TextView android:layout_width="0dp"
              android:layout_height="@dimen/BMITextSize"
              app:layout_constraintTop_toBottomOf="@+id/BMINumberID"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              android:gravity="center"
              android:hint="@string/hintForBMIText"
              android:id="@+id/BMITextID"
              android:textColor="@color/colorPrimary"

    />
    <ImageView android:layout_width="250dp"
               android:layout_height="250dp"
               app:layout_constraintTop_toBottomOf="@+id/BMITextID"
               app:layout_constraintLeft_toLeftOf="@id/buttonCalcID"
               app:layout_constraintRight_toRightOf="@id/buttonCalcID"
               android:id="@+id/imageBMI"
               android:src="@mipmap/ic_launcher"
               android:contentDescription="@string/ImageDesc"

    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/imageBMI"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:gravity="center"
              android:id="@+id/textBMIExplain"
              android:hint="@string/BMIExplainString"
    />

</android.support.constraint.ConstraintLayout>